--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,9 +5,9 @@ name: Python application
 
 on:
   push:
-    branches: [ "main", "CICD" ]
+    branches: [ "CICD" ]
   pull_request:
-    branches: [ "main", "CICD" ]
+    branches: [  "CICD" ]
 
 permissions:
   contents: read
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install flake8 pytest scipy
         pip install numpy tensorflow Pillow
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
