Submittable. Unfortunately didn't get ideal results but that's life

--- a/.gitignore
+++ b/.gitignore
@@ -159,4 +159,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-src/data/
+src/data/train/*
+src/data/diffused_train/*
